force-app/main/default/objects/Work_Order__c/Work_Order__c.object-meta.xml
<CustomObject>
    <description>Dispatchable unit of work created asynchronously from a service request; CDC-enabled for billing propagation.</description>
    <label>Work Order</label>
    <nameField>
        <displayFormat>WO-{00000}</displayFormat>
        <label>Work Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>