force-app/main/default/objects/Work_Order__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Source request</description>
    <label>Service Request</label>
    <referenceTo>Service_Request__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>