force-app/main/default/objects/Work_Order__c/fields/SLA_Due__c.field-meta.xml
<CustomField>
    <fullName>SLA_Due__c</fullName>
    <description>Computed on creation by event trigger</description>
    <label>SLA Due</label>
    <type>DateTime</type>
</CustomField>