force-app/main/default/objects/Work_Order__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Denormalized for scoping/reporting</description>
    <label>Tenant</label>
    <referenceTo>Tenant__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>