force-app/main/default/objects/Work_Order__c/fields/Vendor_Ref__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Ref__c</fullName>
    <description>External vendor reference (set on sync)</description>
    <externalId>true</externalId>
    <label>Vendor Ref</label>
    <length>64</length>
    <type>Text</type>
</CustomField>